OOT-821 : tt2: CRUD  - crud actions create/update

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/index.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/index.html.twig
@@ -7,7 +7,7 @@
     {% if resource_granted('testtaskoro.issue_view') %}
         <div class="btn-group">
             {{ UI.addButton({
-                'path': path('magecore_testtaskoro_issue'),
+                'path': path('magecore_testtaskoro.issue_create'),
                 'entity_label': 'Issues'|trans
             }) }}
         </div>
