OOT-821 : tt2: CRUD  - crud actions create/update

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
@@ -42,9 +42,9 @@
             'title': '',
             'data': [
             form_row(form.summary),
-            form_row(form.code),
-            form_row(form.boughtAt),
-            form_row(form.leasedUntil),
+
+            form_row(form.description),
+
             ]
         }]
     }]
