--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
@@ -23,7 +23,7 @@
         'entity':      form.vars.value,
         'indexPath':   path('magecore_testtaskoro_issue'),
         'indexLabel': 'Issues'|trans,
-        'entityTitle': form.vars.value.model
+        'entityTitle': form.vars.value.summary
     } %}
         {{ parent() }}
     {% else %}
