--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/view.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/view.html.twig
@@ -10,7 +10,7 @@
         }) }}
     {% endif %}
 
-    {% if resource_granted('DELETE', vehicle) %}
+    {% if resource_granted('DELETE', entity) %}
         {{ UI.deleteButton({
             'dataUrl': path('magecore_testtaskoro_api_delete_issue', {'id': entity.id}),
             'dataRedirect': path('magecore_testtaskoro_issue'),
@@ -24,7 +24,7 @@
 
 {% block pageHeader %}
     {% set breadcrumbs = {
-    'entity':      vehicle,
+    'entity':      entity,
     'indexPath':   path('magecore_testtaskoro_issue'),
     'indexLabel': 'Issues'|trans,
     'entityTitle': entity.code
