--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
@@ -45,6 +45,7 @@
             form.type is defined ? form_row(form.type) : '' ,
             form_row(form.description),
             form_row(form.assignedTo),
+            form.Reporter is defined ? form_row(form.Reporter) : '' ,
 
 
             ]
