OOT-821 : tt2: CRUD  - crud actions create/update

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
@@ -3,19 +3,19 @@
 {% form_theme form with 'OroFormBundle:Form:fields.html.twig' %}
 
 {% if form.vars.value.id %}
-    {% set formAction = path('magecore_testtastoro.issue_update', { 'id': form.vars.value.id }) %}
+    {% set formAction = path('magecore_testtaskoro.issue_update', { 'id': form.vars.value.id }) %}
 {% else %}
     {% set formAction = path('magecore_testtaskoro.issue_create') %}
 {% endif %}
 
 {% block navButtons %}
-    {{ UI.cancelButton(path('magecore_testtaskoro.issue_create')) }}
+    {{ UI.cancelButton(path('magecore_testtaskoro_issue')) }}
     {% set html = UI.saveAndCloseButton() %}
     {% if resource_granted('magecore_testtastoro.issue_update') %}
         {% set html = html ~ UI.saveAndStayButton() %}
     {% endif %}
     {{ UI.dropdownSaveButton({ 'html': html }) }}
-    {% endblock navButtons %}
+{% endblock navButtons %}
 
         {% block pageHeader %}
         {% if form.vars.value.id %}
@@ -23,7 +23,7 @@
         'entity':      form.vars.value,
         'indexPath':   path('magecore_testtaskoro_issue'),
         'indexLabel': 'Issues'|trans,
-        'entityTitle': form.vars.value.model
+        'entityTitle': form.vars.value.summary
     } %}
         {{ parent() }}
     {% else %}
