OOT-826 : tt7: Grid for view - details  - resolution entity

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
@@ -46,6 +46,7 @@
             form_row(form.description),
             form_row(form.assignedTo),
             form_row(form.priority),
+            form_row(form.resolution),
 
             ]
         }]
