--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Search/result.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Search/result.html.twig
@@ -1,6 +1,6 @@
 {#
     Available variables:
-    * entity       - user entity OroCRM\Bundle\TaskBundle\Entity\Task or null
+    * entity       - user entity Magecore\Bundle\TestTaskOroBundle\Entity\Issue or null
     * indexer_item - indexer item Oro\Bundle\SearchBundle\Query\Result\Item
 #}
 {% extends 'OroSearchBundle:Search:searchResultItem.html.twig' %}
@@ -10,4 +10,4 @@
 {% set recordUrl = indexer_item.recordUrl %}
 {% set title = indexer_item.recordTitle %}
 
-{% set entityType = Issue %}
+{% set entityType = 'magecore.testtaskoro.issue.entity_label'|trans %}
