OOT-828 : tt9:search  - fix search

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/view.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/view.html.twig
@@ -45,6 +45,9 @@
                 {{ UI.renderProperty('magecore.testtaskoro.issue.description.label'|trans, entity.description) }}
                 {{ UI.renderProperty('magecore.testtaskoro.issue.type.label'|trans, entity.type) }}
                 {{ UI.renderProperty('magecore.testtaskoro.issue.priority.label'|trans, entity.priority) }}
+                {{ UI.renderProperty('magecore.testtaskoro.issue.resolution.label'|trans, entity.resolution) }}
+                {{ UI.renderProperty('magecore.testtaskoro.issue.reporter.label'|trans, entity.reporter) }}
+                {{ UI.renderProperty('magecore.testtaskoro.issue.assigned_to.label'|trans, entity.assignedTo) }}
 
                 {{ UI.renderProperty('Bought at'|trans, entity.createdAt|date) }}
             </div>
