--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
@@ -7,6 +7,8 @@
 
 {% if form.vars.value.id %}
     {% set formAction = path('magecore_testtaskoro.issue_update', { 'id': form.vars.value.id }) %}
+{% elseif entity.parentIssue is not empty %}
+    {% set formAction = path('magecore_testtaskoro.issue_subtask_create', { 'id': entity.parentIssue.id }) %}
 {% else %}
     {% set formAction = path('magecore_testtaskoro.issue_create') %}
 {% endif %}
