--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/view.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/view.html.twig
@@ -77,6 +77,18 @@
                 {%- endif -%}
                 {%- endset -%}
                 {{ UI.renderHtmlProperty('magecore.testtaskoro.issue.assigned_to.label'|trans, assigneeData) }}
+                {% if entity.subtask %}
+                    <a href="{{ path('magecore_testtastoro.issue_view', {'id': entity.reporter.id}) }}">
+                        {{ entity.reporter|oro_format_name|escape }}
+                    </a>
+                {% endif %}
+
+                {% if entity.story %}
+                    {{ UI.renderDynamicFields(entity.ch) }}
+                    <a href="{{ path('magecore_testtastoro.issue_view', {'id': entity.reporter.id}) }}">
+                        {{ entity.reporter|oro_format_name|escape }}
+                    </a>
+                {% endif %}
 
             </div>
         </div>
