OOT-833 : tt14:load fixtures  - load user data fixtures

--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
@@ -54,7 +54,7 @@
             form_row(form.priority),
             form_row(form.resolution),
             form.Reporter is defined ? form_row(form.Reporter) : '' ,
-
+            form_row(form.tags),
 
             ]
         }]
