--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/view.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/view.html.twig
@@ -3,6 +3,7 @@
 {% import 'OroUIBundle::macros.html.twig' as UI %}
 {% import 'OroEntityConfigBundle::macros.html.twig' as entityConfig %}
 {% import 'OroDataGridBundle::macros.html.twig' as dataGrid %}
+{% import 'OroTagBundle::macros.html.twig' as tag %}
 
 {% oro_title_set({params : {"%entity.subject%": entity.summary|default('N/A') }}) %}
 
@@ -95,6 +96,10 @@
                     </div>
 
                 {% endif %}
+                {% if resource_granted('oro_tag_view') %}
+                    {{ UI.renderHtmlProperty('oro.tag.entity_plural_label'|trans, tag.renderView(entity)) }}
+                {% endif %}
+
 
             </div>
         </div>
