--- a/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
+++ b/src/Magecore/Bundle/TestTaskOroBundle/Resources/views/Issue/update.html.twig
@@ -17,7 +17,7 @@
 {% block navButtons %}
     {{ UI.cancelButton(path('magecore_testtaskoro_issue')) }}
     {% set html = UI.saveAndCloseButton() %}
-    {% if resource_granted('magecore_testtastoro.issue_update') %}
+    {% if resource_granted('magecore_testtaskoro.issue_update') %}
         {% set html = html ~ UI.saveAndStayButton() %}
     {% endif %}
     {{ UI.dropdownSaveButton({ 'html': html }) }}
